--- a/Map-Viewer/bin/fxmlFiles/UIMapviewer.fxml
+++ b/Map-Viewer/bin/fxmlFiles/UIMapviewer.fxml
@@ -56,27 +56,31 @@
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="413.0" prefWidth="158.0" style="-fx-background-color: #000000;" styleClass="background">
                <children>
-                  <Button layoutX="2.0" layoutY="171.0" mnemonicParsing="false" onAction="#PlaceBoat" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #000000;">
+                  <Button layoutX="1.0" layoutY="184.0" mnemonicParsing="false" onAction="#PlaceBoat" prefHeight="79.0" prefWidth="157.0" style="-fx-background-color: #000000;">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
+                     <graphic>
+                        <ImageView fitHeight="80.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Resources/Buttons/PlaceBoat.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </Button>
-                  <Button layoutX="2.0" layoutY="56.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #000000;">
+                  <Button layoutX="2.0" layoutY="46.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="80.0" prefWidth="154.0" style="-fx-background-color: #000000;">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
+                     <graphic>
+                        <ImageView fitHeight="80.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Resources/Buttons/PlaceAxe.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </Button>
                   <Label fx:id="cords" layoutX="14.0" layoutY="14.0" style="-fx-text-fill: #FFFFFF;" styleClass="brightlabel" text="Label" />
-                  <Button layoutX="2.0" layoutY="299.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="23.0" prefWidth="155.0" style="-fx-background-color: #000000;">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Button>
-                  <Button layoutX="4.0" layoutY="353.0" mnemonicParsing="false" onAction="#PlaceAxe" prefHeight="51.0" prefWidth="152.0" style="-fx-background-color: #000000;">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Button>
                   <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="29.0" layoutY="410.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../Resources/Buttons/Play.png" />
@@ -85,16 +89,6 @@
                   <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="29.0" layoutY="361.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../Resources/Buttons/Reset.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="80.0" fitWidth="90.0" layoutX="35.0" layoutY="184.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../Resources/Buttons/PlaceBoat.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="80.0" fitWidth="90.0" layoutX="36.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../Resources/Buttons/PlaceAxe.png" />
                      </image>
                   </ImageView>
                   <Label fx:id="cordsAxe" layoutX="14.0" layoutY="136.0" style="-fx-text-fill: #FFFFFF;" styleClass="brightlabel" text="Label" />
