--- a/Map-Viewer/bin/fxmlFiles/UIMapviewer.fxml
+++ b/Map-Viewer/bin/fxmlFiles/UIMapviewer.fxml
@@ -73,18 +73,26 @@
                      </graphic>
                   </Button>
                   <Label fx:id="cords" layoutX="14.0" layoutY="14.0" style="-fx-text-fill: #FFFFFF;" styleClass="brightlabel" text="Label" />
-                  <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="29.0" layoutY="410.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../Resources/Buttons/Play.png" />
-                     </image>
-                  </ImageView>
-                  <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="29.0" layoutY="361.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../Resources/Buttons/ResetButton.png" />
-                     </image>
-                  </ImageView>
+                  <Button layoutX="16.0" layoutY="347.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="131.0" style="-fx-background-color: #000000;" textAlignment="CENTER">
+                     <graphic>
+                        <ImageView fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Resources/Buttons/ResetButton.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
                   <Label fx:id="cordsAxe" layoutX="14.0" layoutY="136.0" style="-fx-text-fill: #FFFFFF;" styleClass="brightlabel" text="Axe co-ordinates:" />
                   <Label fx:id="cordsBoat" layoutX="14.0" layoutY="281.0" style="-fx-text-fill: #FFFFFF;" styleClass="brightlabel" text="Boat co-ordinates:" />
+                  <Button layoutX="24.0" layoutY="397.0" mnemonicParsing="false" style="-fx-background-color: #000000;">
+                     <graphic>
+                        <ImageView fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../Resources/Buttons/Play.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
                </children>
             </AnchorPane>
         </items>
