--- a/Map-Viewer/bin/fxmlFiles/UIMapviewer.fxml
+++ b/Map-Viewer/bin/fxmlFiles/UIMapviewer.fxml
@@ -25,12 +25,6 @@
               <MenuItem mnemonicParsing="false" onAction="#closeApp" text="Exit" />
             </items>
           </Menu>
-            <Menu mnemonicParsing="false" text="Edit">
-              <items>
-                <MenuItem mnemonicParsing="false" text="ZoomIn +" />
-                  <MenuItem mnemonicParsing="false" text="ZoomOut -" />
-              </items>
-            </Menu>
           <Menu mnemonicParsing="false" text="Information">
                <items>
                   <MenuItem mnemonicParsing="false" onAction="#aboutInfo" text="About" />
@@ -85,7 +79,7 @@
                      </graphic>
                   </Button>
                   <Label fx:id="cords" layoutX="14.0" layoutY="14.0" style="-fx-text-fill: #FFFFFF;" styleClass="brightlabel" text="Label" />
-                  <Button layoutX="16.0" layoutY="347.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="131.0" style="-fx-background-color: #000000;" textAlignment="CENTER">
+                  <Button layoutX="16.0" layoutY="347.0" mnemonicParsing="false" onAction="#Reset" prefHeight="40.0" prefWidth="131.0" style="-fx-background-color: #000000;" textAlignment="CENTER">
                      <graphic>
                         <ImageView fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -96,7 +90,7 @@
                   </Button>
                   <Label fx:id="cordsAxe" layoutX="14.0" layoutY="147.0" style="-fx-text-fill: #FFFFFF;" styleClass="brightlabel" text="Axe co-ordinates:" />
                   <Label fx:id="cordsBoat" layoutX="14.0" layoutY="281.0" style="-fx-text-fill: #FFFFFF;" styleClass="brightlabel" text="Boat co-ordinates:" />
-                  <Button layoutX="24.0" layoutY="397.0" mnemonicParsing="false" style="-fx-background-color: #000000;">
+                  <Button layoutX="24.0" layoutY="397.0" mnemonicParsing="false" onAction="#Play" style="-fx-background-color: #000000;">
                      <graphic>
                         <ImageView fitHeight="80.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                            <image>
